--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "yeriomin/redbean-single-file",
+    "name": "saschawiener/redbean-single-file",
     "type": "library",
     "description": "RedBeanPHP is an easy-to-use, on-the-fly ORM for PHP.",
     "keywords": ["MySQL", "InnoDB", "MariaDB", "PostgreSQL", "SQLite3", "CUBRID"],
@@ -7,9 +7,7 @@
     "homepage": "https://github.com/yeriomin/redbean-single-file",
     "authors": [
         {
-          "name": "Gabor de Mooij",
-          "email": "gabordemooij@gmail.com",
-          "homepage": "http://www.redbeanphp.com",
+          "name": "Sascha Wiener",
           "role": "Developer"
         }
     ],
